test/expected/declare_udl_pcci_i.out
declare _x as user-defined literal (pointer to const char, int) returning int
                                                           ^
60: error: invalid parameter type "integer" for user-defined literal; must be "std::size_t" (or equivalent)
